sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:11: error: not found: value depalcement
      depalcement = true}
      ^AlgGnomeSort:16: error: not found: value depalcement
     if(depalcement){
        ^