sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var taille = getNombreValeurs() 
  var i = 0
  var deplacement = false

  while(i != taille - 2)
  	{deplacement = false
      if (!plusPetit(i+1, i + 2) ){
        echange(i+1,i+2)
      depalcement = true}
      if(!plusPetit(i,i+1)){
          echange(i,i+1)
        deplacement = true
        }
     if(depalcement){
       if (i !=0){
         i = i -1
       }
       else{
         i = i  + 1
       }
     }
     else{
       i = i + 1
     }
      
    	
      
  

}
}